2000-03-25  Chris Toshok  <toshok@laptoph.xtoph.org>

	* addressbook/backend/ebook/test-client.c: create a card and then
	look it up.

2000-03-26  Chris Toshok  <toshok@laptoph.xtoph.org>

	* addressbook/backend/pas/pas-backend-file.c
	(pas_backend_file_process_create_card): add db calls to flesh out
	the interface.  hardcoded id that needs to change, once we decide
	how we're going to create it.
	(pas_backend_file_process_remove_card): add db calls to flesh out
	the interface.
	(pas_backend_file_process_modify_card): likewise
	(pas_backend_file_process_check_connection): likewise
	(pas_backend_file_get_vcard): likewise
	(pas_backend_file_load_uri): likewise

2000-03-26  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/backend/ebook/e-book.c: Set the card id properly
	when retrieving a card.

	* addressbook/backend/ebook/e-card.c,
	addressbook/backend/ebook/e-card.h: Added the ability to set the
	card's id (and made getting it work correctly also.)

2000-03-25  Chris Toshok  <toshok@laptoph.xtoph.org>

	* addressbook/backend/ebook/e-book.c (e_book_pop_op): pass GList*
	as second parameter to g_list_remove_link, not the data pointer.

2000-03-26  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/backend/ebook/e-card-types.h: Removed the
	address->description field.
	
	* addressbook/backend/ebook/e-card.c: Added VCard output and
	the use of GtkArguments.

	* addressbook/backend/ebook/test-card.c: Updated this to use the
	GtkArguments.

	* addressbook/backend/ebook/e-book.c: Fixed a memory leak.

2000-03-25  Matt Loper  <matt@helixcode.com>

	* shell/e-shell-view.c (get_view): Move CORBA_Environment to
	different scope.

	* ebook/e-book.c,
	ebook/e-book.h,	
	ebook/e-book.h,		
	ebook/e-card-fields.h,
	ebook/e-card.h,
	ebook/e-commerce.h: old, removed. Up-to-date EBook stuff is kept
	in addressbook/backend/ebook.

2000-03-23  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/backend/ebook/e-card.c,